Fixes for 59112, 59345